--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -124,7 +124,7 @@ $ qemu-img info --output=json -f vpc cfme-azure-5.8.0.17-1.x86_64.vhd
   "filename": "cfme-azure-5.8.0.17-1.x86_64.vhd",
   "cluster-size": 2097152,
   "format": "vpc",
-  "actual-size": 2133401600,
+  "actual-size": 3158839296,
   "dirty-flag": false
 }
 ----
@@ -285,6 +285,18 @@ $ sudo yum install -y gcc libffi-devel python-devel openssl-devel
 $ curl -L https://aka.ms/InstallAzureCli | bash
 ----
 +
+. Export Azure environment variables.
++
+----
+$ export AZURE_STORAGE_ACCOUNT=<azure-storage-account-name>
+$ export AZURE_STORAGE_KEY="<azure-storage-account-key>"
+
+Example:
+
+$ export AZURE_STORAGE_ACCOUNT=xyzgroup9401
+$ export AZURE_STORAGE_KEY="zG7Dc29I7ysKik/Xiqk3tQN43CtLpObmJom+Hze6ko/ZiwXhdElknABzUbZ/zie5vW1XyTlGsgbaVf0fUijf2w=="
+----
++
 
 
 
@@ -303,7 +315,7 @@ Example:
 
 $ az storage blob upload --account-name azrhelclistact --container-name azrhelclistcont --type page --file cfme-azure-5.8.0.17-1.x86_64.vhd --name cfme-azure-5.8.0.17-1.x86_64.vhd
  
-Percent complete: %100.0
+Finished[#############################################################]  100.0000%
 ----
 +
 . Get the URL for the uploaded .vhd file using the following command. You will need to use this URL in the next step.
@@ -316,6 +328,31 @@ Example:
 $ az storage blob url -c azrhelclistcont -n cfme-azure-5.8.0.17-1.x86_64.vhd 
 
 "https://azrhelclistact.blob.core.windows.net/azrhelclistcont/cfme-azure-5.8.0.17-1.x86_64.vhd"
+----
++
+. Log in to Azure.
++
+----
+$ az login
+
+Example:
+
+To sign in, use a web browser to open the page https://aka.ms/devicelogin and enter the code GJP8Y33XY to authenticate.
+
+[
+  {
+    "cloudName": "AzureCloud",
+    "id": "528c646b-83jb-4527-1a04-10d294fd0cc2",
+    "isDefault": true,
+    "name": "Demo Azure account",
+    "state": "Enabled",
+    "tenantId": "7e7cfe6b-cff0-e4d8-a446-57a76c9b4958",
+    "user": {
+      "name": "clouduser",
+      "type": "user"
+    }
+  }
+]
 ----
 +
 . Create the virtual machine. Note that the following command uses `--generate-ssh-keys`. In this example, the private/public key pair `/home/clouduser/.ssh/id_rsa` and `/home/clouduser/.ssh/id_rsa.pub` are created.
@@ -331,7 +368,7 @@ az vm create --resource-group azrhelclirsgrp --location southcentralus --use-unm
   "fqdns": "",
   "id": "/subscriptions//resourceGroups/azrhelclirsgrp/providers/Microsoft.Compute/virtualMachines/cfme-appliance-1",
   "location": "southcentralus",
-  "macAddress": "",
+  "macAddress": "00-0X-XX-XX-XX-XX",
   "powerState": "VM running",
   "privateIpAddress": "10.0.0.4",
   "publicIpAddress": "12.84.121.147",
@@ -359,7 +396,7 @@ For a menu, please type: appliance_console
 +
 . Enter `sudo appliance_console` at the prompt. The summary screen appears.
 
-You have successfully provisioned a {product-title_short} virtual appliance in Microsoft Azure. 
+You have successfully provisioned a {product-title_short} virtual appliance in Microsoft Azure.
 
 
 [NOTE]
@@ -379,7 +416,7 @@ $ az storage account show-connection-string -n azrhelclistact -g azrhelclirsgrp
 }
 ----
 +
-. Export the connection string. Copy the connection string and paste it into the following command. This connects your system to the storage account. 
+. Export the connection string. Copy the connection string and paste it into the following command. This connects your system to the storage account.
 +
 ----
 $ export AZURE_STORAGE_CONNECTION_STRING="<storage-connection-string>"
