update procedure for RHV VM Snapshot

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_VM_snapshot.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_VM_snapshot.adoc
@@ -10,7 +10,7 @@ To create a snapshot of a virtual machine:
 +
 image:Snapshot_info.png[]
 
-. Click image:plus_circle.png[](*Create a new snapshot for this VM*).
+. Click image:plus_green.png[](*Create a new snapshot for this VM*).
 . Enter snapshot details in *Description*.
 . (Optional) Check *Snapshot VM memory* for the snapshot to preserve the virtual machine's current runtime state.
 . Click *Create*.
