--- a/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
@@ -2878,7 +2878,7 @@ The following methods can be used on a virtual machine or template object.
 						
 | 
 							
-								Create a snapshot of the object
+								Create a snapshot of the object. The *name* parameter is not required for Red Hat Virtualization virtual machines when creating a snapshot. 
 							
 						
 
