--- a/doc-Managing_Infrastructure_and_Inventory/topics/Snapshots.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Snapshots.adoc
@@ -3,7 +3,7 @@
 
 A snapshot is a view of a virtual machine's operating system and applications on any or all available disks at a given point in time. Take a snapshot of a virtual machine before you make a change to it that may have unintended consequences. You can use a snapshot to return a virtual machine to a previous state.
 
-The procedures in this section apply to Red Hat Virtualization virtual machines only.
+The procedures in this section apply to Red Hat Virtualization virtual machines only. View virtual machines by infrastructure providers by navigating to menu:Compute[Infrastructure > Providers].
 
 [NOTE]
 ====
