--- a/common/openstack/cinder-backup-create.adoc
+++ b/common/openstack/cinder-backup-create.adoc
@@ -9,11 +9,11 @@
 You can take an incremental backup of a volume if you have at least one existing full backup of the volume. An incremental volume saves resources by capturing only changes made to the volume since its last backup. See https://access.redhat.com/documentation/en/red-hat-openstack-platform/9/single/storage-guide#section-create-volume-backup-incremental[Create an Incremental Volume Backup] in the _Red Hat OpenStack Platform Storage Guide_ for more information.
 ====
 +
-. (Optional) Select *Force?* to allow backup of a volume attached to the instance.
+. (Optional) Select *Force?* to allow backup of a volume attached to an instance.
 +
 [NOTE]
 ====
-Selecting the *Force* option will back up the volume whether its status is "available" or "in-use". Backing up an "in-use" volume ensures data is crash-consistent.
+Selecting the *Force* option will back up the volume whether its status is _available_ or _in-use_. Backing up an _in-use_ volume ensures data is crash-consistent.
 ====
 +
 . Click *Save*.
