Added a procedure outlining how to create an Amazon and Azure catalog item in the Catalogs and Services section.

--- a/common/create-amazon-catalog-item.adoc
+++ b/common/create-amazon-catalog-item.adoc
@@ -1,5 +1,5 @@
 
-Create a catalog item that uses an Amazon
+Use the following procedure to create an Amazon catalog item. Once created, the catalog item joins the service dialog with all of the options in the provisioning dialog; then, users can order Red Hat Enterprise Linux instances from the self-service catalog in the Service UI.
 
 . Navigate to menu:Services[Catalogs], then click on the *Catalog Items* accordion. 
 . Click image:1847.png[](*Configuration*), then image:1862.png[](*Add a New Catalog Item*).
@@ -9,8 +9,8 @@ Create a catalog item that uses an Amazon
 .. Select *Display in Catalog*.
 .. Select the appropriate catalog from the *Catalog* list.
 .. Select the appropriate service dialog from the *Dialog* list.
-. Enter the request details in the *Request Info* tab.
-.. Select the *Name* of the catalog from the list.
-.. Select the number of instances from the *Count* list. 
-.. 
-
+. Click the *Request Info* tab to enter request details:
+.. On the *Catalog* tab, select your Amazon AWS image name from the *Name* list, and the number of instances from the *Count* list. The *VM Name* will be overwritten during the provisioning process, but you can enter it as _changeme_ for now.
+.. On the *Properties* tab, select _T2 Micro_ from the *Instance Type* list, and _Basic_ or _Advanced_ for *CloudWatch*. If you plan to access the instance, select a *Guest Access Key Pair*, too.
+.. On the *Customize* tab, set the *Root Password* under *Credentials*, then select the _Basic root pass template_ as a script for cloud-init under *Customize Template*.
+. Click *Add*.
