--- a/common/create-amazon-catalog-item.adoc
+++ b/common/create-amazon-catalog-item.adoc
@@ -1,5 +1,5 @@
 
-Use the following procedure to create an Amazon catalog item. Once created, the catalog item joins the service dialog with all of the options in the provisioning dialog; then, users can order Red Hat Enterprise Linux instances from the self-service catalog in the Service UI.
+Use the following procedure to create an Amazon catalog item. Once created, the catalog item and service dialog combine with all of the options in the provisioning dialog. Users can then order Red Hat Enterprise Linux instances from the *Service Catalog* in the {product-title_short} Service user interface.
 
 . Navigate to menu:Services[Catalogs], then click on the *Catalog Items* accordion. 
 . Click image:1847.png[](*Configuration*), then image:1862.png[](*Add a New Catalog Item*).
