include SQL friendly virtual attributes in API docs

--- a/api/appendices/quick_reference.adoc
+++ b/api/appendices/quick_reference.adoc
@@ -45,6 +45,7 @@ of the REST API.
 |Querying Capability |Query Parameters
 |Paging |offset, limit
 |Sorting |sort_by=attr, sort_order=asc\|desc
+| | Can sort by database columns and SQL friendly virtual attributes
 |Filtering |filter[]=...
 |Querying by Tag |i.e. by_tag=/department/finance
 |Expanding Results |expand=<what>, i.e.  expand=resources,tags,service_templates,...
