--- a/api/overview/query.adoc
+++ b/api/overview/query.adoc
@@ -31,8 +31,8 @@ attributes=_all_), then all attributes are returned
 returned in the collection and not just the href. See
 <<expanding-collection,Expanding Collection>> below
 |Sorting | |
-| |sort_by=atr1,atr2,... |By which attribute(s) to sort the result by
-| |sort_order=ascending or descending |Order of the sort
+| |sort_by=atr1,atr2,... |By which attribute(s) to sort the result by. SQL friendly virtual attributes are also supported.
+| |sort_order=asc or desc |Order of the sort
 | |sort_options=ignore_case |Option for case insensitive sort
 |=======================================================================
 
