clarified the user in two places where it was unspecified, following peer review feedback in PR #447

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
@@ -65,7 +65,7 @@ If no longer needed, you can uninstall the {product-title} pod from your project
 Use this procedure if only {product-title} exists in the project.
 ====
 
-. Inside the project, run the following as the user:
+. Inside the project, run the following as a basic user:
 +
 ------
 $ oc delete all --all
