Added missing description of tenants in the introduction of reports section of the Monitoring, Alerts, and Reporting guide.

--- a/common/reports-categories.adoc
+++ b/common/reports-categories.adoc
@@ -11,6 +11,7 @@ This category also provides reports relating to the operation of {product-title}
 You must be capturing capacity and utilization data to get this information.
 * *Running Processes*: information on processes running on a virtual machine.
 +
-You must have domain credentials entered for the zone to collect the info for these reports, and the virtual machine must have been analyzed at least once.
+You must have domain credentials entered for the zone to collect the information for these reports, and the virtual machine must have been analyzed at least once.
 * *Trending*: projections of datastore capacity, along with host CPU and memory use.
+* *Tenants*: quotas report aggregated by each tenant that shows quota name, total quota, in use, allocated, and available. The report currently lists all tenants and there is no nesting information available by parent and child tenants.
 * *Provisioning*: provisioning activity based on the approver, datastore, requester, and virtual machine.
