--- a/doc-Managing_Infrastructure_and_Inventory/topics/Deleting_a_VM_snapshot.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Deleting_a_VM_snapshot.adoc
@@ -7,7 +7,7 @@ To delete a virtual machine snapshot:
 . Select the target virtual machine, and open it to view its details.
 . Under *Properties*, click *Snapshots* to show information about the virtual machine's snapshots.
 . Select the snapshot to delete under *Available Snapshots*.
-. Click  image:1861.png[] and select *Delete Selected Snapshot* or *Delete All Existing Snapshots*.
+. Click  image:1861.png[] and select *Delete Selected Snapshot*.
 . Click *OK*.
 
 
