Added missing description of tenants in the introduction of reports section of the Monitoring, Alerts, and Reporting guide.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Reports.adoc
@@ -19,6 +19,7 @@ Each category has its own set of subfolders.
 * Use *Running Processes* to view the information on processes running on a virtual machine.
   You must have domain credentials entered for the zone to collect the info for these reports, and the virtual machine must have been analyzed at least once.
 * *Trending* shows projections of datastore capacity and host CPU and memory use.
+* *Tenants*: quotas report aggregated by each tenant that shows quota name, total quota, in use, allocated, and available. The report currently lists all tenants and there is no nesting information available by parent and child tenants.
 * *Provisioning* shows provisioning activity based on the approver, datastore, requester, and virtual machine.
 
 For a complete list of reportable fields in {product-title}, see xref:_appe_reportable_fields[].
