--- a/doc-High_Availability_Guide/topics/Overview.adoc
+++ b/doc-High_Availability_Guide/topics/Overview.adoc
@@ -1,33 +1,29 @@
 [[Overview]]
 == Environment Overview
 
-This guide describes how to configure and manage database high availability in a {product-title} environment. This configuration allows for disaster mitigation: a failure in the primary database does not result in downtime, as the standby database takes over the failed database’s processes. This is made possible by database replication between two or more database servers. In {product-title_short}, these servers are _database-only {product-title_short} appliances_ which do not have `evmserverd` processes enabled. This is configured from the `appliance_console` menu at the time of deployment.  
+This guide describes how to configure and manage database high availability in a {product-title} environment. This configuration allows for disaster mitigation: a failure in the primary database does not result in downtime, as the standby database takes over the failed database’s processes. This is made possible by database replication between two or more database servers, where only one database is writable at any given time. In {product-title_short}, these servers are _database-only {product-title_short} appliances_ which do not have `evmserverd` processes enabled. This is configured from the `appliance_console` menu at the time of deployment. 
 
-In this configuration, only one database is writable at any given time. 
+This guide describes two types of appliances used in high availability: 
 
-Unlike the high availability configuration method in {product-title_short} 4.1 and previous, which used Pacemaker (READ), database high availability in {product-title_short} 4.2 and newer is achieved through replication via `repmgr` with `postgres`. 
+* _Database-only {product-title_short} appliances_, which do not have `evmserverd` processes enabled or a user interface. 
+* _{product-title_short} appliances_, which are standard appliances containing a user interface and which have `evmserverd` processes enabled.
+
+Unlike the high availability method configured in older versions of {product-title_short} using `pacemaker`, the built-in database high availability in {product-title_short} 4.2 and newer is achieved by `repmgr` database replication with PostgreSQL. 
 
 ////
 we monitor the repmgr metadata about what database servers are present in the cluster. When the database we (a particular server) are configured against goes down, we start polling each of the configured standby servers to monitor which one comes up as the new primary. The promotion is orchestrated either by repmgrd on the database servers or is done manually. When we find that a standby has been promoted we reconfigure {product-title_short} (by writing the new IP address in the `database.yml` file) to point to the new primary.
 ////
 
-The failover monitor watches the `repmgr` metadata about what database servers are present in the cluster. When the database we (a particular server) are configured against goes down, we start polling each of the configured standby servers to monitor which one comes up as the new primary. The promotion is orchestrated either by `repmgrd` on the database servers or is done manually. When we find that a standby has been promoted we reconfigure {product-title_short} (by writing the new IP address in the `database.yml` file) to point to the new primary.
-
-This is all done as a part of the "Failover Monitor" that should be running on the {product-title_short} (non-database) servers.
-
-Note, this procedure also does not provide scalability or a multi-master database setup. While a {product-title} environment is comprised of an engine tier and a database tier, this configuration affects only the database tier and does not provide load balancing for the appliances.
-
-
-This guide describes two types of appliances used in high availability: 
-
-* _Database-only {product-title_short} appliances_, which do not have `evmserverd` processes enabled or a user interface.
-* _{product-title_short} appliances_, which are standard appliances containing a user interface and which have `evmserverd` processes enabled.
+In this configuration, a failover monitor daemon is configured and running on each {product-title_short} (non-database) server. The failover monitor watches the `repmgr` metadata about the database-only appliances present in the cluster. When the primary database-only appliance goes down, the {product-title_short} appliances start polling each of the configured standby database-only appliances to monitor which one comes up as the new primary. The promotion is orchestrated either by `repmgrd` on the database-only servers or is done manually. When the {product-title_short} appliances find that a standby has been promoted, {product-title_short} reconfigures the setup by writing the new IP address in the `database.yml` file to point to the new primary.
 
 
 [NOTE]
 ====
 Manual steps are required to reintroduce the failed database node back as the standby server. See xref:reintroducing_the_failed_node[].
 ====
+
+Note, this procedure also does not provide scalability or a multi-master database setup. While a {product-title} environment is comprised of an engine tier and a database tier, this configuration affects only the database tier and does not provide load balancing for the appliances.
+
 
 [[requirements]]
 === Requirements
