created skeleton topic for worker appliances section

--- a/doc-High_Availability_Guide/cfme/master.adoc
+++ b/doc-High_Availability_Guide/cfme/master.adoc
@@ -18,6 +18,7 @@ include::topics/Overview.adoc[]
 include::topics/Installation.adoc[]
 include::topics/Database_Failover.adoc[]
 include::topics/HAProxy.adoc[]
+include::topics/HA_Roles.adoc[]
 //Updating_HA is only in CFME as it's concerning subscriptions.
 include::topics/Updating_HA.adoc[]
 
