--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -283,6 +283,47 @@ A catalog bundle is created and visible in the *Service Catalog* accordion.
 You should also create and specify an Entry Point in the `DOMAIN/Service/Provisioning/StateMachines/Methods/CatalogBundle` class for each catalog item that is part of a bundle. If you do not, then the pre and post provision processing will occur for each item in the bundle in addition to processing for the *Catalog Bundle*. To set the entry point, go into each *Catalog Item* and check *Display in Catalog*. Then, you will see the *Entry Point* field.
 ====
 
+
+=======
+[[creating-a-catalog-item]]
+==== Creating a Catalog Item
+
+Create a catalog item for each virtual machine or cloud instance that will be part of the service.
+
+include::common/catalog-item-creation.adoc[]
+
+[[creating-a-generic-catalog-item]]
+==== Creating a Generic Catalog Item
+
+Create generic catalog items for services non-specific to virtualization or cloud environments. This catalog item type can serve a wide array of needs, from creating a vLAN across a network to accessing virtual machine IP addresses and adding them to a load balancer pool.
+
+include::common/create-generic-catalog-item.adoc[]
+
+
+[[create-playbook-service-catalog-item]]
+==== Creating an Ansible Playbook Service Catalog Item
+
+Create a catalog item that uses an Ansible Playbook to back it.
+
+include::common/create-playbook-service-catalog-item.adoc[]
+
+[[create-tower-catalog-item]]
+==== Creating an Ansible Tower Service Catalog Item
+
+Create a service catalog item from an Ansible Tower template you can use to execute an Ansible Tower playbook in {product-title}. 
+
+include::common/create-tower-catalog-item.adoc[]
+
+
+
+[[provisioning-a-service]]
+===== Provisioning a Service
+
+include::common/catalog-order.adoc[]
+
+The parameters are passed to the children based on the method tied to the choices made in the dialog.
+
+
 [[provisioning-a-service]]
 ===== Provisioning a Service
 
