Added links to Satellite docs
Added Satellite docs links for updating appliances - Andrew's suggested links from Google doc.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -404,7 +404,7 @@ Scheduled downtime is required while updating system packages for the following 
 * System updates may require a reboot of the {product-title_short} appliance.
 ====
 
-To update all packages on the appliance: 
+To update all packages on the appliance using `yum`, follow the procedure below. To update packages on the appliance using Red Hat Satellite, see https://access.redhat.com/documentation/en-us/red_hat_satellite/6.2/html/host_configuration_guide/chap-red_hat_satellite-host_configuration_guide-viewing_and_applying_errata[Viewing and Applying Errata] and https://access.redhat.com/documentation/en-us/red_hat_satellite/6.2/html/host_configuration_guide/sect-host_configuration_guide-configuring_and_running_remote_commands[Configuring and Running Remote Commands] in the Red Hat Satellite 6 documentation for more information.
 
 . Log into each appliance console as the root user and perform the following steps:
 .. Stop the CloudForms application (the evmserver process) with the following command:
