Updated Container image instructions
Clarified the instructions for pulling the container images.

--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -28,7 +28,9 @@ OpenShift Container Platform 3.5 is required for this installation. Red Hat has 
 
 The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. 
 
-These files create the OpenShift pods comprising the appliance, and are available from the Red Hat Container Catalog. To download the files to your system, follow the OpenShift instructions on the *Get this image* page for each of the following images:
+These files create the OpenShift pods comprising the appliance, and are available from the Red Hat Container Catalog.
+
+To download the files to your system, navigate to each of the following pages and click the *Get this image* tab. Select *OpenShift* from the *Choose your platform:* list, then follow the instructions on that page to pull the image:
 
 * https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-app[{product-title_short} appliance image]
 * https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-memcached[Memcached image]
