Added a procedure to create a container template catalog item.

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -335,15 +335,18 @@ include::common/create-amazon-catalog-item.adoc[]
 include::common/create-azure-catalog-item.adoc[]
 
 
+[[create-container-template-catalog-item]]
+===== Creating a Container Template Catalog Item
+
+include::common/create-container-template-catalog-item.adoc[]
+
+
 [[provisioning-a-service]]
 ===== Provisioning a Service
 
 include::common/catalog-order.adoc[]
 
 The parameters are passed to the children based on the method tied to the choices made in the dialog.
-
-
-
 
 
 
