updates to HA guide

--- a/doc-High_Availability_Guide/topics/HAProxy.adoc
+++ b/doc-High_Availability_Guide/topics/HAProxy.adoc
@@ -254,7 +254,7 @@ listen apache-8443
 
 
 [[verifying_HAProxy]]
-==== Verifying the HAProxy Configuration
+=== Verifying the HAProxy Configuration
 
 Verify the HAProxy configuration by inspecting the following:
 
