update files based on reviewer feedback

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_VM_snapshot.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_VM_snapshot.adoc
@@ -8,7 +8,7 @@ To create a snapshot of a virtual machine:
 . Under *Properties*, click *Snapshots* to show information about the virtual machine's snapshots.
 . Click image:plus_green.png[](*Create a new snapshot for this VM*).
 . Enter snapshot details in *Description*.
-. (Optional) Check *Snapshot VM memory* for the snapshot to preserve the virtual machine's current runtime state. This option will appear only if the VM *Power State* is image:2143.png[](*On*). 
+. (Optional) Select *Snapshot VM memory* for the snapshot to preserve the virtual machine's current runtime state. This option will appear only if the VM *Power State* is image:2143.png[](*On*). 
 . Click *Create*.
 
 
