Updated the text on buttons for removing objects for CF 4.6

--- a/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/topics/Cloud_Orchestration.adoc
+++ b/doc-Integration_with_AWS_CloudFormation_and_OpenStack_Heat/topics/Cloud_Orchestration.adoc
@@ -53,7 +53,7 @@ Use this procedure to delete orchestration templates using the dashboard UI.
 [arabic]
 . Navigate to menu:Services[Catalogs] and select *Orchestration Templates* in the accordion menu.
 . Select the orchestration template you want to delete from the *All Orchestration Templates* list.
-. Click image:1848.png[Configuration] *Configuration*, then click image:1861.png[Delete] *Remove selected Orchestration Template*.
+. Click image:1848.png[Configuration] *Configuration*, then click image:1861.png[Delete] *Remove selected Orchestration Template from Inventory*.
 . A warning window to confirm the permanent removal of the selected item from the VMDB appears.
 . Click *OK*.
 
