--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -194,7 +194,7 @@ Compare virtual machines and templates:
 +
 image:2149.png[]
 +
-. To delete an item from the comparison, click  image:1861.png[]btn:[(Remove this item)] at the bottom of the items column.
+. To delete an item from the comparison, click  image:1861.png[]btn:[(Remove this item from Inventory)] at the bottom of the items column.
   This option is only available when comparing more than two virtual machines.
 . To view many items on one screen, go to a compressed view by clicking  image:2024.png[] btn:[(Compressed View)].
   To return to an expanded view, click  image:2023.png[] btn:[(Expanded View)].
