--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Key_Pair.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_Key_Pair.adoc
@@ -2,7 +2,7 @@
 
 . Navigate to menu:Compute[Clouds > Key Pairs].
 . Select the key pair you want to remove from the key pairs list. Or, click on the key pair to see the instances it relates to.
-. Click  image:1847.png[] (*Configuration*), then click  image:1861.png[] (*Remove selected Key Pairs*). A warning appears to confirm the action.
+. Click  image:1847.png[] (*Configuration*), then click  image:1861.png[] (*Remove selected Key Pairs from Inventory*). A warning appears to confirm the action.
 . Click *OK*.
 
 
