--- a/doc-Managing_Infrastructure_and_Inventory/topics/Removing_a_Datastore.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Removing_a_Datastore.adoc
@@ -5,7 +5,7 @@ This button is enabled only if a datastore is completely empty.
 
 . Navigate to menu:Compute[Infrastructure > Datastores]. 
 . Click on the Datastore to remove. 
-. Click  image:1847.png[Configuration] (*Configuration*), and then  image:2098.png[Remove Datastore] (*Remove Datastore*). 
+. Click  image:1847.png[Configuration] (*Configuration*), and then  image:2098.png[Remove Datastore] (*Remove Datastore from Inventory*). 
 . Click *OK*.
 
 
