update docs with reporter recommendations

--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Provider.adoc
@@ -26,7 +26,7 @@ The *Hostname* must be a unique fully qualified domain name.
 +
 [IMPORTANT]
 ====
-To collect capacity and utilization data from a Red Hat Virtualization provider, the capacity and utilization server roles must be enabled in {product-title_short}. The Red Hat Virtualization environment must also contain the Data Warehouse and Reports components and a {product-title_short} user. See xref:enabling_CU_RHV[] for configuration details.
+To collect capacity and utilization data from a Red Hat Virtualization provider, the capacity and utilization server roles must be enabled in {product-title_short}. The Red Hat Virtualization environment must also contain the Data Warehouse and Reports components and a {product-title_short} user. Specific clusters, hosts, and datastores can also be configured for collection. See xref:enabling_CU_RHV[] for configuration details.
 ====
 +
 * Enter the database hostname or IPv4 or IPv6 address in *Hostname*.
