--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -73,8 +73,8 @@ In environments that use Keystone v3 authentication, the user must have the *adm
 
 [NOTE]
 ====
-To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment be on a non-private network.
+* To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment be on a non-private network.
 Hence, the OpenStack adminURL endpoint should be assigned an IP address other than `192.168.x.x`. Additionally, all the Keystone endpoints must be accessible, otherwise refresh will fail.
-For information on enabling Clusters and Datastores for C&U collection, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#enabling-a-cluster,-host,-or-datastore-for-capacity-and-utilization-collection[ Enabling a Cluster, Host, or Datastore for Capacity and Utilization Collection] in the Red Hat CloudForms _General Configuration_ guide.
+* Collecting C & U data from am OpenStack cloud provider requires selecting the *Collect for All Clusters* option under *Configuration*, in the setting menu. For information, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#enabling-a-cluster,-host,-or-datastore-for-capacity-and-utilization-collection[ Enabling a Cluster, Host, or Datastore for Capacity and Utilization Collection] in the Red Hat CloudForms _General Configuration_ guide.
 
 ====
