--- a/doc-Monitoring_Alerts_and_Reporting/topics/Showing_a_Report_in_Full_Screen.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Showing_a_Report_in_Full_Screen.adoc
@@ -1,7 +1,7 @@
 [[showing-a-report-in-full-screen]]
 ==== Showing a Report in Full Screen
 
-View the report in full screen to zoom into examine report details.
+View the report in full screen to examine report details.
 From full screen, you can also print the chart that accompanies a report. 
 
 . Navigate to menu:Cloud Intelligence[Reports].
