--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -29,6 +29,9 @@ image:2189.png[]
 include::Discovering_Multiple_Management_Systems.adoc[]
 
 :leveloffset: 2
+include::Discovering_Physical_Infra_Providers.adoc[]
+
+:leveloffset: 2
 = Red Hat Virtualization Providers
 
 To use a Red Hat Virtualization provider, add it to the appliance and authenticate its hosts. You can also configure capacity and utilization data collection to help track usage and find common issues.
