added more context to Roles chapter following feedback from Brad Ascar

--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -1,7 +1,9 @@
 [[ha_roles]]
 == Scaling a Highly Available {product-title_short} Environment
 
-After configuring the database-only appliances, the {product-title_short} appliances, and the HAProxy load balancer, you can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[] and assign server roles. The {product-title_short} appliances and roles can be configured in any order.
+After creating high availability for the database tier and the user interface tier, the rest of the infrastructure should be sized as appropriate for the roles and the environments that they manage. These roles and tiers use built-in high availability mechanisms like primary, secondary, and tertiary failover or use round robin or most available schemes built into {product-title_short}.
+
+You can configure additional worker appliances as needed using the steps in xref:installation_appliances_addl[] and assign server roles. The {product-title_short} appliances and roles can be configured in any order.
 
 .Considerations
 
