update with reviewer feedback

--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -31,9 +31,9 @@ To authenticate the provider using a self-signed Certificate Authority (CA), con
 If you select `Keystone v3`, enter the `Keystone V3 Domain ID` that {product-title} should use. This is the domain of the user account you will be specifying later in the *Default* tab. If domains are not configured in the provider, enter *default*.
 +
 [NOTE]
-=====
+=========
 include::osp-keystone-api-v3.adoc[]
-=====
+=========
 
 . By default, _tenant mapping_ is disabled. To enable it, set *Tenant Mapping Enabled* to *Yes*.
 
@@ -73,8 +73,7 @@ In environments that use Keystone v3 authentication, the user must have the *adm
 
 [NOTE]
 ====
-* To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment be on a non-private network.
+ * To collect inventory and metrics from an OpenStack environment, the {product-title} appliance requires that the adminURL endpoint for the OpenStack environment be on a non-private network.
 Hence, the OpenStack adminURL endpoint should be assigned an IP address other than `192.168.x.x`. Additionally, all the Keystone endpoints must be accessible, otherwise refresh will fail.
-* Collecting C & U data from am OpenStack cloud provider requires selecting the *Collect for All Clusters* option under *Configuration*, in the setting menu. For information, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#enabling-a-cluster,-host,-or-datastore-for-capacity-and-utilization-collection[ Enabling a Cluster, Host, or Datastore for Capacity and Utilization Collection] in the Red Hat CloudForms _General Configuration_ guide.
-
-====
+* Collecting capacity and utilization data from an OpenStack cloud provider requires selecting the *Collect for All Clusters* option under *Configuration*, in the settings menu. For information, see  https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/general_configuration/#capacity-and-utilization-collections[Capacity and Utilization Collections] in the _General Configuration_ guide.
+====  
