--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -94,7 +94,7 @@ To enable a cluster, host, or datastore for Capacity and Utilization Collection:
 [NOTE]
 =========================
 . As new clusters, hosts, and datastores are discovered, you will need to come back to this configuration to enable collection of capacity and utilization data unless you have used the *Collect for All* check boxes.
-. *Collect for All Clusters* must be checked to be able to collect C & U data from Cloud Providers such as Red Hat OpenStack or Amazon EC2.
+. *Collect for All Clusters* must be checked to be able to collect capacity and utilization data from cloud providers such as Red Hat OpenStack Platform or Amazon EC2.
 =========================
 
 [[tags]]
