update with reviewer comments

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Operational_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Operational_Alerts.adoc
@@ -51,7 +51,7 @@
 					
 | 
 						
-							Alert is raised when one server detects that another server has not responded in (2 minutes).
+							Alert is raised when one server detects that another server has not responded in 2 minutes.
 						
 					
 | 
@@ -158,7 +158,7 @@
 					
 | 
 						
-							Something is filling the disk such as temp files used by the operating system such as, yum updates and normal /tmp files, or temp files in /var/lib/data/miqtemp/.
+							 Temp files used by the operating system may be filling the disk. Yum updates, normal /tmp files, or temp files in /var/lib/data/miqtemp/ may cause the problem.
 						
 					
 
@@ -216,7 +216,7 @@
 					
 | 
 						
-							Logs are getting too big or are not being log rotated properly every day. Review most recent logs.
+							Logs are getting too big or are not being log rotated properly every day. Review the most recent logs.
 						
 					
 
@@ -297,7 +297,7 @@
 						
 					
 |
-							An influx of events from the Virtual Center or RHEV causes an inability of EVM/CFME to handle the capacity at which they are being queued. Utilize the Event Handler Configuration to filter events that are causing problematic queue table growth.
+							An influx of events from the Virtual Center or Red Hat Virtualization causes an inability of EVM/CFME to handle the capacity at which they are being queued. Utilize the Event Handler Configuration to filter events that are causing problematic queue table growth.
 | 
 						
 							EVM Worker Exceeded Memory Limit
