--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -383,7 +383,7 @@ The following four items are required to make a service available to users from 
 . *Service Catalog Item*: A service catalog item is the actual service which combines a service dialog with a provisioning dialog.
 
 
-.Provisioning Dialog
+.Create a Provisioning Dialog
 
 Every provider in {product-title_short} comes with a sample provisioning dialog covering the options specific to that provider. To have a look at the sample provisioning dialog for Red Hat Virtualization, go to menu:Automation[Automate > Customization > Provisioning Dialogs > VM Provision] and select *Sample RedHat VM Provisioning Dialog*. This is a textual representation of the dialog you will get when you provision a virtual machine or instance.
 
@@ -483,7 +483,7 @@ The last step in creating a service is to create a catalog item to represent tha
 . Navigate to menu:Services[Catalog].
 . Click the *Catalog Items* accordion.
 . Click image:1847.png[](*Configuration*), and then image:1862.png[](*Add a new Catalog Item*).
-. Select *RHEV* from *Catalog Item Type* list.
+. Select *RHEV* from the *Catalog Item Type* list.
 . Enter the basic details in the Basic Info tab:
 .. Enter a name for the catalog item in *Name*.
 .. Enter a description for the catalog item in *Description*.
@@ -514,6 +514,8 @@ As part of the above sample service, you created a provisioning dialog that defi
 .. Enter the virtual machine description in *VM Description*.
 . In *VM Characteristics*, enter *Number of CPUs* and *VM Memory*.
 . Click *Add to Shopping Cart* and access the shopping cart by clicking its icon on the upper-right corner of the screen.
-. Click *Order*. You have ordered a new provisioning request. You can follow the request by clicking the *Orders* tab and then clicking the order to see its progress and details.
+. Click *Order*. You have ordered a new provisioning request. You can follow the progress and see other details of your order request by selecting it from the *Orders* tab.
+
+See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/introduction_to_the_self_service_user_interface/[Introduction to the Self Service User Interface] for more information about using the Service user interface.
 
 
