--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -501,7 +501,7 @@ The last step in creating a service is to create a catalog item to represent tha
 
 .Summary
 
-As part of the above sample service, you created a provisioning dialog that defines the options that can be set on a virtual machine and a service dialog which allows us to expose certain options to be set by the user. For our example, the service name, virtual machine name, description, and characteristics are configurable. Then, you created a service catalog and finally a catalog item. The catalog item combines the service dialog with all of the options in the provisioning dialog. You can now provision a virtual machine through Red Hat Virtualization from the Service User Interface (SUI).
+As part of the above sample service, you created a provisioning dialog that defines the options that can be set on a virtual machine and, you created a service dialog which allows us to expose certain options to be set by the user. For our example, the service name, virtual machine name, virtual machine description, and virtual machine characteristics are configurable. Then, you created a service catalog and finally a catalog item. The catalog item combines the service dialog with all of the options in the provisioning dialog. You can now provision a virtual machine through Red Hat Virtualization using the Service User Interface (SUI).
 
 .Provision a Virtual Machine
 
