added images folder, symlinks to images folder, and 2 draft HA images

--- a/doc-High_Availability_Guide/topics/HAProxy.adoc
+++ b/doc-High_Availability_Guide/topics/HAProxy.adoc
@@ -23,7 +23,9 @@ This configuration uses two HAProxy servers and a Virtual IP (configured by `kee
 * HAProxy2: 10.19.137.132 (cf-hap2.example.com)
 * Virtual IP (to be configured by `keepalived`): 10.19.137.135 (cf-ha.example.com)
 
-// INSERT edited architecture image
+The following diagram shows the HAProxy configuration:
+image:CloudForms_HA_Architecture_431939_0817_ECE-01.png[] 
+
 
 To configure HAProxy load balancing:
 
