--- a/doc-High_Availability_Guide/topics/HA_Roles.adoc
+++ b/doc-High_Availability_Guide/topics/HA_Roles.adoc
@@ -15,8 +15,7 @@ See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-si
 
 
 The following diagram shows an example of a highly available database configuration with worker appliances configured:
-
-*[INSERT DIAGRAM]*
+image:CloudForms_HA_Architecture_431939_0817_ECE-02.png[] 
 
 ////
 
